fix solved row on mobile styling

--- a/src/styles/GameGridStyle.css
+++ b/src/styles/GameGridStyle.css
@@ -115,7 +115,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 22.1em;
+    width: 22.6em;
     height: 4em;
     margin: 0.2em;
     margin-top: 0px;
